[package]
name = "advent_of_code_2016"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
color-eyre = "0.5"
aoc_lib = { git = "https://github.com/Measter/aoc_lib" }
itertools = "0.10.0"
md5 = "0.7.0"
